@@ -8,8 +8,8 @@
   obtained e.g.\ by FTICR or TOF mass spectrometers 
 }
 \usage{
-decomposeMass(mass, ppm=5.0, elements=NULL, filter=NULL, z=0)
-decomposeIsotopes(masses, intensities, ppm=5.0, elements=NULL, filter=NULL,  z=0)
+decomposeMass(mass, ppm=2.0, mzabs=0.0001, elements=NULL, filter=NULL, z=0)
+decomposeIsotopes(masses, intensities, ppm=2.0, mzabs=0.0001, elements=NULL, filter=NULL,  z=0)
 isotopeScore(molecule, masses, intensities, elements = NULL, filter = NULL, z = 0)
 }
 \arguments{
@@ -17,6 +17,7 @@ isotopeScore(molecule, masses, intensities, elements = NULL, filter = NULL, z = 
   \item{masses}{A vector of masses (or m/z values) of an isotope cluster}
   \item{intensities}{Abolute or relative intensities of the \code{masses} peaks}
   \item{ppm}{allowed deviation of hypotheses from given mass}
+  \item{mzabs}{absolute deviation in dalton (mzabs and ppm will be added)}
   \item{z}{charge z of m/z peaks for calculation of real mass. 0 is for auto-detection}
   \item{elements}{list of allowed chemical elements, defaults to CHNOPS}
   \item{filter}{NYI, will be a selection of DU, DBE and Nitrogen rules}
@@ -24,7 +25,6 @@ isotopeScore(molecule, masses, intensities, elements = NULL, filter = NULL, z = 
     decomposeMass / decomposeIsotopes}
 }
   
-}
 \details{
   Sum formulas are calculated which explain the given mass or isotope
   pattern.
@@ -51,7 +51,7 @@ isotopeScore(molecule, masses, intensities, elements = NULL, filter = NULL, z = 
 
 \examples{
 # For Glutamate: 
-decomposeIsotopes(c(147.0529,148.0563), c(100.0,5.561173), 25.0)
+decomposeIsotopes(c(147.0529,148.0563), c(100.0,5.561173))
 }
 
 \references{
